# SDL3-Test-Program

./: .env.example  .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL3.cmake
libs/: .gitignore  README.md
src/: main.c
